code (roc-aucs): calculate aucs in loop as opposed to apply

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -31,7 +31,7 @@
     "from statsmodels.stats.multitest import multipletests\n",
     "import scipy\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import roc_auc_score, roc_curve\n",
+    "from sklearn.metrics import roc_curve, auc\n",
     "import pandas as pd"
    ]
   },
@@ -383,7 +383,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<seaborn.matrix.ClusterGrid at 0x7fcb3a283748>"
+      "text/plain": "<seaborn.matrix.ClusterGrid at 0x7ffc9ba0a780>"
      },
      "execution_count": null,
      "metadata": {},
@@ -1106,21 +1106,21 @@
     "    filter_bool = (tp_bool | fp_bool)\n",
     "    roc_df = roc_df[filter_bool].reset_index(drop=True)\n",
     "    if condition_col is not None:\n",
-    "        roc_aucs = (roc_df.groupby(condition_col)\n",
-    "                    .apply(lambda df: roc_auc_score(df['tp'], pos_control_direction * df[score_col]))\n",
-    "                    .reset_index()\n",
-    "                    .rename({0: 'ROC-AUC'}, axis=1))\n",
     "        tpr_fpr_df_list = []\n",
+    "        roc_auc_list = []\n",
     "        for group, df in roc_df.groupby(condition_col):\n",
     "            fpr, tpr, treshold = roc_curve(df['tp'], pos_control_direction * df[score_col])\n",
     "            group_tpr_fpr_df = pd.DataFrame({'tpr': tpr, 'fpr': fpr, 'threshold': treshold})\n",
     "            group_tpr_fpr_df[condition_col] = group\n",
     "            tpr_fpr_df_list.append(group_tpr_fpr_df)\n",
+    "            roc_auc = auc(fpr, tpr)\n",
+    "            roc_auc_list.append({condition_col: group, 'ROC-AUC': roc_auc})\n",
+    "        roc_aucs = pd.DataFrame(roc_auc_list)\n",
     "        tpr_fpr_df = (pd.concat(tpr_fpr_df_list).reset_index(drop=True))\n",
     "    else:\n",
-    "        roc_aucs = roc_auc_score(roc_df['tp'], pos_control_direction * roc_df[score_col])\n",
     "        fpr, tpr, treshold = roc_curve(roc_df['tp'], pos_control_direction * roc_df[score_col])\n",
     "        tpr_fpr_df = pd.DataFrame({'tpr': tpr, 'fpr': fpr, 'threshold': treshold})\n",
+    "        roc_aucs = auc(fpr, tpr)\n",
     "    return roc_aucs, tpr_fpr_df"
    ]
   },
@@ -1345,7 +1345,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.legend.Legend at 0x7fcb1e46af28>"
+      "text/plain": "<matplotlib.legend.Legend at 0x7ffc9da5c9b0>"
      },
      "execution_count": null,
      "metadata": {},
