bug (pseudogenes): handle NAs when grouping pseudogenes

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -586,7 +586,7 @@
     "    genes = remapped_annotations[gene_col]\n",
     "    control_remap = {}\n",
     "    for regex in control_regex:\n",
-    "        control_genes = genes[genes.str.contains(regex)].to_list()\n",
+    "        control_genes = genes[genes.str.contains(regex, na=False)].to_list()\n",
     "        np.random.seed(seed)\n",
     "        np.random.shuffle(control_genes) # shuffle mutates existing variable  \n",
     "        n_controls = len(control_genes)\n",
