added code to calculate hypergeometric p-values

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -32,6 +32,7 @@
     "import scipy\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import roc_curve, auc\n",
+    "from math import log10\n",
     "import pandas as pd"
    ]
   },
@@ -953,7 +954,7 @@
     "    gene_col: str, column which uniquely identifies a gene |\n",
     "    condition_col: str, column which uniquely identifies experimental conditions |\n",
     "    average_cols: list of str, columns to average\n",
-    "    zscore_cols: list of str, columns to z-score --> will also caculate p-value and FDR for each column\n",
+    "    zscore_cols: list of str, columns to z-score --> will also calculate p-value and FDR for each column\n",
     "    returns: dataframe, lfcs aggregated at the gene level\n",
     "    \"\"\"\n",
     "    agg_mean = {col: 'mean' for col in average_cols}\n",
@@ -972,6 +973,45 @@
     "        agg_lfcs[col + '_fdr'] = (agg_lfcs.groupby(condition_col)\n",
     "                                  [col + '_p_value']\n",
     "                                  .transform(lambda x: multipletests(x, method='fdr_bh')[1]))\n",
+    "    return agg_lfcs\n",
+    "\n",
+    "def get_hypergeometric_pval(df, total_guides):\n",
+    "    \"\"\"Calculates the p-value for a gene using the hypergeometric test\n",
+    "\n",
+    "    df: dataframe, scores with annotations per gene\n",
+    "    total_guides: int, Total number of guides in the library\n",
+    "    \"\"\"\n",
+    "    n_guides = len(df)\n",
+    "    asc_avg_pval = np.mean([-log10(scipy.stats.hypergeom.pmf(r['within-gene asc ranks'], total_guides, n_guides, r['ascending_ranks'])) for i,r in df.iterrows()])\n",
+    "    desc_avg_pval = np.mean([-log10(scipy.stats.hypergeom.pmf(r['within-gene desc ranks'], total_guides, n_guides, r['descending_ranks'])) for i,r in df.iterrows()])\n",
+    "    return max(asc_avg_pval, desc_avg_pval)\n",
+    "\n",
+    "def aggregate_gene_lfcs_hypergeometric(lfcs, gene_col, condition_col='condition', average_cols=None):\n",
+    "    \"\"\"\n",
+    "    Aggregate log-fold changes at the gene level and calculate p-values using the hypergeometric test\n",
+    "\n",
+    "    lfcs: dataframe, scores with annotations |\n",
+    "    gene_col: str, column which uniquely identifies a gene |\n",
+    "    condition_col: str, column which uniquely identifies experimental conditions |\n",
+    "    average_cols: list of str, columns to average\n",
+    "    returns: dataframe, lfcs aggregated at the gene level\n",
+    "    \"\"\"\n",
+    "    agg_mean = {col: 'mean' for col in average_cols}\n",
+    "    aggs = {condition_col: 'count', **agg_mean}\n",
+    "    agg_lfcs = (lfcs\n",
+    "                .groupby([condition_col, gene_col])\n",
+    "                .agg(aggs)\n",
+    "                .rename({condition_col: 'n_guides'}, axis=1)\n",
+    "                .reset_index())\n",
+    "    for col in average_cols:\n",
+    "        lfcs['ascending_ranks'] = lfcs.groupby(condition_col)[col].rank(ascending=True)\n",
+    "        lfcs['descending_ranks'] = lfcs.groupby(condition_col)[col].rank(ascending=False)\n",
+    "        lfcs['within-gene asc ranks'] = (lfcs.groupby([condition_col,gene_col])[col].rank(ascending=True))\n",
+    "        lfcs['within-gene desc ranks'] = (lfcs.groupby([condition_col,gene_col])[col].rank(ascending=False))\n",
+    "        total_guides = np.max(lfcs['ascending_ranks'])\n",
+    "        col_hyp_pval = pd.DataFrame(lfcs.groupby([condition_col,gene_col]).apply(get_hypergeometric_pval, total_guides = total_guides)).reset_index()\n",
+    "        col_hyp_pval.columns = [condition_col, gene_col, col+'_hypergeometric_test_avg_pval']\n",
+    "        agg_lfcs = pd.merge(agg_lfcs, col_hyp_pval, on=[condition_col, gene_col])\n",
     "    return agg_lfcs"
    ]
   },
