--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -1004,10 +1004,10 @@
     "                .rename({condition_col: 'n_guides'}, axis=1)\n",
     "                .reset_index())\n",
     "    for col in average_cols:\n",
-    "        lfcs['ascending_ranks'] = lfcs.groupby(condition_col)[col].rank(ascending=True)\n",
-    "        lfcs['descending_ranks'] = lfcs.groupby(condition_col)[col].rank(ascending=False)\n",
-    "        lfcs['within-gene asc ranks'] = (lfcs.groupby([condition_col,gene_col])[col].rank(ascending=True))\n",
-    "        lfcs['within-gene desc ranks'] = (lfcs.groupby([condition_col,gene_col])[col].rank(ascending=False))\n",
+    "        lfcs['ascending_ranks'] = lfcs.groupby(condition_col)[col].rank(method='first', ascending=True)\n",
+    "        lfcs['descending_ranks'] = lfcs.groupby(condition_col)[col].rank(method='first', ascending=False)\n",
+    "        lfcs['within-gene asc ranks'] = (lfcs.groupby([condition_col,gene_col])[col].rank(method='first', ascending=True))\n",
+    "        lfcs['within-gene desc ranks'] = (lfcs.groupby([condition_col,gene_col])[col].rank(method='first', ascending=False))\n",
     "        total_guides = np.max(lfcs['ascending_ranks'])\n",
     "        col_hyp_pval = pd.DataFrame(lfcs.groupby([condition_col,gene_col]).apply(get_hypergeometric_pval, total_guides = total_guides)).reset_index()\n",
     "        col_hyp_pval.columns = [condition_col, gene_col, col+'_hypergeometric_test_avg_pval']\n",
