added code to add additional info to hypergeometric output

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -1141,6 +1141,7 @@
     }
    ],
    "source": [
+    "#Plotting average LFC vs Hypergeometric test p-values\n",
     "plot_lfcs_hyp = gene_lfcs_hyp.copy()\n",
     "plot_lfcs_hyp = plot_lfcs_hyp[(plot_lfcs_hyp.n_guides>=3)&(plot_lfcs_hyp.n_guides<=5)]\n",
     "hyp_ctrls = plot_lfcs_hyp[plot_lfcs_hyp['Annotated Gene Symbol'].isin(nonessential_genes)]\n",
