parallelized hypergeometric calculation

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -29,11 +29,13 @@
     "import numpy as np\n",
     "from pandas.api.types import is_numeric_dtype, is_list_like\n",
     "from statsmodels.stats.multitest import multipletests\n",
-    "import scipy\n",
+    "from scipy import stats\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import roc_curve, auc\n",
     "from math import log10\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from joblib import Parallel, delayed\n",
+    "import multiprocessing as mp"
    ]
   },
   {
@@ -969,26 +971,37 @@
     "        agg_lfcs[col] = agg_lfcs[col]/np.sqrt(agg_lfcs['n_guides'])\n",
     "        agg_lfcs[col + '_p_value'] = (agg_lfcs.groupby(condition_col)\n",
     "                                      [col]\n",
-    "                                      .transform(lambda x: scipy.stats.norm.sf(abs(x))*2))\n",
+    "                                      .transform(lambda x: stats.norm.sf(abs(x))*2))\n",
     "        agg_lfcs[col + '_fdr'] = (agg_lfcs.groupby(condition_col)\n",
     "                                  [col + '_p_value']\n",
     "                                  .transform(lambda x: multipletests(x, method='fdr_bh')[1]))\n",
     "    return agg_lfcs\n",
     "\n",
-    "def get_hypergeometric_pval(df, total_guides):\n",
+    "def get_hypergeometric_pval(df, name):\n",
     "    \"\"\"Calculates the p-value for a gene using the hypergeometric test\n",
     "\n",
     "    df: dataframe, scores with annotations per gene\n",
-    "    total_guides: int, Total number of guides in the library\n",
     "    returns: str of ascending constuct ranks, str of descending construct ranks and -log10(avg. p-value) for gene\n",
     "    \"\"\"\n",
     "    n_guides = len(df)\n",
+    "    total_guides = df['total_guides'].values[0]\n",
     "    asc_ranks = ';'.join([str(int(x)) for x in df.sort_values('ascending_ranks', ascending=True)['ascending_ranks']])\n",
     "    desc_ranks = ';'.join([str(int(x)) for x in df.sort_values('descending_ranks', ascending=True)['descending_ranks']])\n",
-    "    asc_avg_pval = np.mean([-log10(scipy.stats.hypergeom.pmf(r['within-gene asc ranks'], total_guides, n_guides, r['ascending_ranks'])) for i,r in df.iterrows()])\n",
-    "    desc_avg_pval = np.mean([-log10(scipy.stats.hypergeom.pmf(r['within-gene desc ranks'], total_guides, n_guides, r['descending_ranks'])) for i,r in df.iterrows()])\n",
+    "    asc_avg_pval = np.mean([-log10(stats.hypergeom.pmf(r['within-gene asc ranks'], total_guides, n_guides, r['ascending_ranks'])) for i,r in df.iterrows()])\n",
+    "    desc_avg_pval = np.mean([-log10(stats.hypergeom.pmf(r['within-gene desc ranks'], total_guides, n_guides, r['descending_ranks'])) for i,r in df.iterrows()])\n",
     "    best_pval = max(asc_avg_pval, desc_avg_pval)\n",
-    "    return asc_ranks, desc_ranks, best_pval\n",
+    "    return (name[0], name[1], asc_ranks, desc_ranks, best_pval)\n",
+    "\n",
+    "def apply_parallel(df, func):\n",
+    "    \"\"\"\n",
+    "    Parallelizes calculation of hypergeometric p-values\n",
+    "\n",
+    "    df: dataframe, df grouped by condition, gene symbol\n",
+    "    func: name of function to call\n",
+    "    return: tuple, str of ascending constuct ranks, str of descending construct ranks and -log10(avg. p-value) for gene\n",
+    "    \"\"\"\n",
+    "    ret_list = Parallel(n_jobs=mp.cpu_count())(delayed(func)(group, name) for name, group in df)\n",
+    "    return ret_list\n",
     "\n",
     "def aggregate_gene_lfcs_hypergeometric(lfcs, gene_col, condition_col='condition', average_cols=None):\n",
     "    \"\"\"\n",
@@ -1012,10 +1025,9 @@
     "        lfcs['descending_ranks'] = lfcs.groupby(condition_col)[col].rank(method='first', ascending=False)\n",
     "        lfcs['within-gene asc ranks'] = (lfcs.groupby([condition_col,gene_col])[col].rank(method='first', ascending=True))\n",
     "        lfcs['within-gene desc ranks'] = (lfcs.groupby([condition_col,gene_col])[col].rank(method='first', ascending=False))\n",
-    "        total_guides = np.max(lfcs['ascending_ranks'])\n",
-    "        col_hyp_pval = pd.DataFrame(lfcs.groupby([condition_col,gene_col]).apply(get_hypergeometric_pval, total_guides = total_guides)).reset_index()\n",
-    "        col_hyp_pval[[col+'_ascending_construct_ranks',col+'_descending_construct_ranks',col+'_hypergeometric_test_avg_pval']] = pd.DataFrame(col_hyp_pval[0].to_list(), index=col_hyp_pval.index)\n",
-    "        col_hyp_pval = col_hyp_pval.drop(columns=[0])\n",
+    "        lfcs['total_guides'] = np.max(lfcs['ascending_ranks'])\n",
+    "        col_hyp_pval = pd.DataFrame(apply_parallel(lfcs.groupby([condition_col, gene_col]), get_hypergeometric_pval))\n",
+    "        col_hyp_pval.columns = [condition_col, gene_col, col+'_ascending_construct_ranks',col+'_descending_construct_ranks',col+'_hypergeometric_test_avg_pval']\n",
     "        agg_lfcs = pd.merge(agg_lfcs, col_hyp_pval, on=[condition_col, gene_col])\n",
     "    return agg_lfcs"
    ]
