fixed lognorm error with data type

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -74,7 +74,7 @@
     "    returns: numpy or pandas array\n",
     "    \"\"\"\n",
     "    reads_per_million = (reads/reads.sum())*(10**6)\n",
-    "    lognormed_reads = np.log2(reads_per_million + 1)\n",
+    "    lognormed_reads = np.log2(reads_per_million.astype(float) + 1)\n",
     "    return lognormed_reads\n",
     "\n",
     "\n",
